added spacing button

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,6 +34,7 @@ layout: default
   border: none;
   cursor: pointer;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 #export-btn:hover {
@@ -60,8 +61,6 @@ layout: default
     link.click();
   }
 </script>
-
-<br>
 
   <!-- Back to Recipes Button -->
   <footer>
