--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ page.title | escape }} | {{ site.title | escape }}</title>
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/main.css">
-  <link rel="icon" href="{{ site.baseurl }}/assets/images/logo.png" type="image/x-icon">
+  <link rel="icon" href="https://m4nasi.github.io/recipes/assets/images/logo.png" type="image/x-icon">
   <!-- Add other meta tags and links here -->
 </head>
 
